# QtFiles

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh  requirements.txt  vcpkg.json
backend/: bindings.cpp  file_operations.cpp  file_operations.h  settings.cpp  settings.h  types.h  utils.cpp  utils.h
gui/: actions.py  file_explorer.cpp  file_explorer.h  file_explorer.py  inline_colour_picker.py  main.cpp  main.py  ressources.qml  ressources.qrc  settings.py
gui/builders/: modal_builder.cpp  modal_builder.h
gui/models/: file_model.cpp  file_model.h
gui/qml/: main.qml
gui/qml/components/: FileExplorer.qml
scripts/: install_deps.sh  pre-commit.sh  setup-git-hooks.sh
src/: main.cpp
src/backend/: settings.cpp
src/core/: file_operations.cpp  file_operations.h  settings.cpp
src/gui/: file_explorer.cpp  file_explorer.h
src/gui/builders/: modal_builder.cpp  modal_builder.h
src/gui/components/inputs/: clickable_line_edit.h
src/gui/models/: file_model.cpp  file_model.h
src/utils/: types.h  utils.h
tests/: test_file_operations.cpp  test_utils.cpp
